# tathPracer

./: .gitignore  README.md  img.go  main.go  notes.txt  pixels.go  ray.go  scene.go  sphere.go
go/: go.mod  img.go  main.go  pixels.go  ray.go
rust/: Cargo.toml
rust/src/: aabb.rs  img.rs  main.rs  material.rs  math.rs  obj_importing.rs  object_octree.rs  objects.rs  octree.rs  progress_indicator.rs  ray.rs  scene.rs  sphere.rs  triangle_octree.rs  vec3d.rs  voxel_octree.rs  world.rs  world_octree.rs
