[package]
name = "tathPracer"
version = "0.1.0"
authors = ["thrombe <yash.n.thombare620@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = "0.8.4"

[profile.release]
lto = true # link time optimisation -> improves performance for things across crates (not in this project tho. not using much crates here)
